# upmpdcli

./: .gitignore  Makefile.am  README.asc  autogen.sh  configure.ac  patch.patch
cfgui/: confgui.cpp  confgui.h  confmain.cpp  mainwindow.h  picoxml.h  upmpdcli-config.pro  upmpdcli-config.pro.in
debian/: changelog  control  control-precise  control-trusty  copyright  postinst  rules  rules-precise  rules-trusty  scweb.default  scweb.init  scweb.install  upmpdcli-config.install  upmpdcli-gmusic.install  upmpdcli-qobuz.install  upmpdcli-spotify.install  upmpdcli-tidal.install  upmpdcli-uprcl.install  upmpdcli.init  upmpdcli.install  upmpdcli.service
debian/patches/: fix-global-bind.patch  series
doc/: Makefile  anatomy.txt  mpdas-upnp.txt  release-0.11.html  release-0.11.txt  release-0.8.html  release-0.8.txt  release-0.9.html  release-0.9.txt  releases.txt  sc2mpd.html  sc2mpd.txt  scmulti.html  scmulti.txt  upmpdcli-cloud.txt  upmpdcli-config.txt  upmpdcli-manual.txt  upmpdcli-or-mpdupnp.txt  upmpdcli-receiver-alsa.dia  upmpdcli-receiver-mpd.dia  upmpdcli-sender-receiver.dia  upmpdcli.html  upmpdcli.txt
doc/pics/: upmpdcli-sender-receiver.dia
libupnpp/: base64.cxx  cdircontent.cxx  cdircontent.hxx  cdirectory.cxx  cdirectory.hxx  config.h.in  description.cxx  description.hxx  device.cxx  device.hxx  discovery.cxx  discovery.hxx  expatmm.hxx  getsyshwaddr.c  getsyshwaddr.h  ixmlwrap.cxx  ixmlwrap.hxx  log.cxx  log.hxx  md5.cxx  md5.hxx  service.cxx  service.hxx  soaphelp.cxx  soaphelp.hxx  upnpavutils.cxx  upnpavutils.hxx  upnpp_p.hxx  upnpplib.cxx  upnpplib.hxx  workqueue.hxx
libupnpp/control/: avlastchg.cxx  avlastchg.hxx  avtransport.cxx  avtransport.hxx  cdircontent.cxx  cdircontent.hxx  cdirectory.cxx  cdirectory.hxx  description.cxx  description.hxx  device.hxx  discovery.cxx  discovery.hxx  httpdownload.cxx  httpdownload.hxx  mediarenderer.cxx  mediarenderer.hxx  mediaserver.cxx  mediaserver.hxx  ohplaylist.cxx  ohplaylist.hxx  ohproduct.cxx  ohproduct.hxx  renderingcontrol.cxx  renderingcontrol.hxx  service.cxx  service.hxx
libupnpp/device/: device.cxx  device.hxx  vdir.cxx  vdir.hxx
m4/: linnsongcast.m4  single_cxx_check.m4
man/: upmpdcli.1
rdpl2stream/: AsfPlaylistDecoder.py  AsxPlaylistDecoder.py  M3uPlaylistDecoder.py  PlsPlaylistDecoder.py  README  RamPlaylistDecoder.py  StreamDecoder.py  XspfPlaylistDecoder.py  fetchStream.py  tststreams.txt
rdpl2stream/lib/: DummyMMSHandler.py  common.py
rpm/: json-not-in-jsoncpp.patch  pinfo-ape.patch  upmpdcli.spec
samplescripts/: Analog-Input  Analog-SenderReceiverMyinput
scctl_src/: scctl.cpp
src/: ConnectionManager.xml  OHCredentials.xml  OHProduct.xml  OHRadio.xml  OHReceiver.xml  OHVolume.xml  avtransport.cxx  avtransport.hxx  cdplugin.hxx  chrono.cpp  chrono.h  closefrom.cpp  closefrom.h  conf_post.h  config.h.in  config.h.in~  conftree.cpp  conftree.cxx  conftree.h  conftree.hxx  conman.cxx  conman.hxx  contentdirectory.cxx  contentdirectory.hxx  description.xml  execmd.cpp  execmd.h  httpfs.cxx  httpfs.hxx  main.cxx  main.hxx  mediaserver.cxx  mediaserver.hxx  mpdcli.cxx  mpdcli.hxx  netcon.cpp  netcon.h  ohcredentials.cxx  ohcredentials.hxx  ohinfo.cxx  (+41 more)
src/cdplugins/: cdplugin.hxx  cmdtalk.cpp  cmdtalk.h  plgwithslave.cxx  plgwithslave.hxx  tidal.cxx  tidal.hxx
src/cdplugins/gmusic/: .#tutu.txt  gmusic-app.py  session.py
src/cdplugins/pycommon/: cmdtalk.py  cmdtalkplugin.py  conftree.py  routing.py  upmplgmodels.py  upmplgutils.py
src/cdplugins/qobuz/: exception.py  models.py  qobuz-app.py  session.py
src/cdplugins/qobuz/api/: raw.py
src/cdplugins/tidal/: tidal-app.py  tidal.cxx  tidal.hxx  tidal.py
src/cdplugins/tidal/tidalapi/: __init__.py  models.py
src/mediaserver/: 00doc.txt  ContentDirectory.xml  MS-description.xml  contentdirectory.cxx  contentdirectory.hxx  mediaserver.cxx  mediaserver.hxx
src/mediaserver/cdplugins/: .#trace  abuffer.h  bufxchange.h  cdplugin.hxx  cmdtalk.cpp  cmdtalk.h  curlfetch.cpp  curlfetch.h  netfetch.cpp  netfetch.h  plgwithslave.cxx  plgwithslave.cxx~  plgwithslave.hxx  streamproxy.cpp  streamproxy.h
src/mediaserver/cdplugins/gmusic/: gmusic-app.py  session.py
src/mediaserver/cdplugins/pycommon/: cmdtalk.py  cmdtalkplugin.py  conftree.py  routing.py  upmplgmodels.py  upmplgutils.py
src/mediaserver/cdplugins/qobuz/: debug.py  qobuz-app.py  session.py
src/mediaserver/cdplugins/qobuz/api/: __init__.py  raw.py
src/mediaserver/cdplugins/spotify/: mkspotiauth.sh  session.py  spotiauthinit.py  spotify-app.py  spotiproxy.cpp  spotiproxy.h  spotipyauth.py  upmspotid.py
src/mediaserver/cdplugins/spotify/spotipy/: client.py  oauth2.py  util.py
src/mediaserver/cdplugins/tidal/: tidal-app.py
src/mediaserver/cdplugins/tidal/tidalapi/: __init__.py  models.py
src/mediaserver/cdplugins/uprcl/: folders.py  minimconfig.py  minimtagfixer.py  rclconfig-fields  rclconfig-mimeconf  rclconfig-mimemap  rwlock.py  uprcl-app.py  uprclcontrol.py  uprclfolders.py  uprclhttp.py  uprclindex.py  uprclinit.py  uprclplaylists.py  uprclsearch.py  uprcltags.py  uprcltagscreate.py  uprcluntagged.py  uprclutils.py
src/mediaserver/cdplugins/uprcl/bottle/views/: header.tpl  main.tpl
src/radio_scripts/: fip-meta.py  radio-paradise-get-art.sh  radio-paradise-get-flac.py
systemd/: upmpdcli.service
upexplo/: upexplo.cxx
upmpd/: ConnectionManager.xml  avtransport.cxx  avtransport.hxx  conftree.cxx  conman.cxx  conman.hxx  description.xml  mpdcli.cxx  mpdcli.hxx  ohinfo.cxx  ohinfo.hxx  ohmetacache.cxx  ohmetacache.hxx  ohplaylist.cxx  ohplaylist.hxx  ohproduct.cxx  ohproduct.hxx  ohtime.cxx  ohtime.hxx  ohvolume.cxx  ohvolume.hxx  renderctl.cxx  renderctl.hxx  rendering.cxx  rendering.hxx  upmpd.cxx  upmpd.hxx  upmpdcli.conf  upmpdutils.cxx  upmpdutils.hxx
web/: bottle.py  scweb-standalone.py  scweb.py
web/init/: default-scweb  scweb-service
web/static/: style.css
web/views/: assoc.tpl  header.tpl  list.tpl  main.tpl  menu.tpl  stop.tpl
